--- a/templates/hub.html
+++ b/templates/hub.html
@@ -5,7 +5,7 @@
 <div>
     <img src="{{ url.format(hub.Photo_Reference,key) }}">
     <h1>{{hub.Name}}</h1>
-    
+    <p>Will put descriptions and highlights of each place here</p>
     <div class="flex-container">
     {% for category in hub.Category %}
     <div class="pill">
