--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,13 @@
 
 	<!-- note the special href for files in the Flask "static" folder -->
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+	<link rel="shortcut icon" type="image/x-icon" href="/static/images/artintern.png" />
 
 </head>
 <body>
 
 <div id="container" >
+
 
   <!-- Jinja directives: page contents will go between them -->
   {% block content %}
